# swarm-lib

./: .gitignore  DESIGN.html  DESIGN.md  README.md  pyproject.toml
.github/workflows/: deploy-site.yml  deploy-site.yml.disabled
examples/hmd-triage/: README.md  classify.sh  dispatcher.sh  driver.sh  escalate.sh
examples/seven-step-chain/: README.md  driver.sh  handler.sh
site/: README.md  astro.config.mjs  package.json  tailwind.config.mjs
site/k8s/: swarm-website.yaml
site/src/components/: Footer.astro  Nav.astro
site/src/layouts/: Base.astro
site/src/pages/: index.astro  patterns.astro
site/src/pages/docs/: api.astro  comparison.astro  concepts.astro  index.astro  production.astro  quickstart.astro
site/src/pages/examples/: hmd-triage.astro  index.astro  seven-step-chain.astro
site/src/styles/: global.css
swarm_lib/: __init__.py  _io.py  claims.py  cli.py  orphan.py  status.py  worker_loop.sh
tests/: test_claims.py  test_multi_worker.py  test_orphan.py  test_status.py
