[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-lib"
version = "0.1.0.dev0"
description = "Filesystem-as-orchestrator for agentic workflows. Atomic-rename queueing + status.json checkpointing."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dan Pittman" }]
requires-python = ">=3.11"
keywords = ["agents", "llm", "queue", "orchestration", "maildir", "claude", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.urls]
Homepage = "https://mabus.ai/swarm/"
Repository = "https://github.com/dpdanpittman/swarm-lib"
Issues = "https://github.com/dpdanpittman/swarm-lib/issues"

[project.scripts]
swarm-cli = "swarm_lib.cli:main"

[tool.setuptools.packages.find]
include = ["swarm_lib*"]

[tool.setuptools.package-data]
swarm_lib = ["worker_loop.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
